--- a/demo/web/index.html
+++ b/demo/web/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   <script src="js/jquery-1.4.2.js"></script>
   <script src="js/nodechat.js"></script>
+  <script src="js/md5.js"></script>
   <script src="js/client.js"></script>
 </head>
 <body class="login">
@@ -17,6 +18,10 @@
     <p>
       <label for="nick">Please choose a nickname:</label>
       <input type="text" id="nick" maxlength="50" autocomplete="off" />
+    </p>
+    <p>
+      <label for="email">Gravatar Email (optional):</label>
+      <input type="text" id="email" maxlength="2048" autocomplete="off" />
     </p>
   </form>
   
