fixing nicks bugs... ugh

--- a/demo/web/index.html
+++ b/demo/web/index.html
@@ -13,13 +13,11 @@
 <body class="login">
   <header><img src="images/node-chat.png" width="71" height="10" alt="Node Chat" /></header>
   
-  <form id="login">
+  <form id="login" action="">
     <h1>Welcome to Node-<strong>Chat</strong></h1>
     <p>
       <label for="nick">Please choose a nickname:</label>
-      <input type="text" id="nick" maxlength="50" autocomplete="off" />
-    </p>
-    <p>
+      <input type="text" id="nick" maxlength="50" autocomplete="off" autofocus="autofocus" />
       <label for="email">Gravatar Email (optional):</label>
       <input type="text" id="email" maxlength="2048" autocomplete="off" />
     </p>
@@ -44,8 +42,7 @@
     
     <footer>
       <p class="credits">
-        Node.js + jQuery Chat Demo by <a href="http://scottgonzalez.com">Scott González</a> <span class="pipe">|</span>
-        User Interface by <a href="http://dougneiner.com">Doug Neiner</a>
+        <a href="http://github.com/SlexAxton/node-chat" target="_blank">BVLabsChat</a> is a BazaarVoice Labs Project.
       </p>
     </footer>
     
