--- a/demo/web/index.html
+++ b/demo/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>NodeChat</title>
+  <title>Bazaarvoice :: Labs Chat</title>
 
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   <script src="js/jquery-1.4.2.js"></script>
@@ -14,7 +14,7 @@
   <header><img src="images/node-chat.png" width="71" height="10" alt="Node Chat" /></header>
   
   <form id="login" action="">
-    <h1>Welcome to Node-<strong>Chat</strong></h1>
+    <h1><strong>BV</strong>Labs<strong>Chat</strong></h1>
     <p>
       <label for="nick">Please choose a nickname:</label>
       <input type="text" id="nick" maxlength="50" autocomplete="off" autofocus="autofocus" />
@@ -38,6 +38,7 @@
         <p><input type="text" name="message" value="" autocomplete="off" id="message" /></p>
         <input type="submit" value="Send" id="Send" />
       </fieldset>
+      <a id="insertGist" href="http://gist.github.com/" target="_blank">Gist</a>
     </form>
     
     <footer>
